# hello_rust

./: .gitignore  CITATION.cff  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
adder/src/: .lib.rs.swp  lib.rs
cargo-serde-example/: Cargo.toml
collections/src/: lib.rs  main.rs
collections/tests/: wordcount.rs
composing/: Cargo.toml
composing/src/: main.rs
docs/: index.md
enums/: Cargo.toml
enums/src/: main.rs
error_handling/src/: main.rs
fun_with_hashes/: Cargo.toml
fun_with_hashes/src/: lib.rs  main.rs
fun_with_hashes/tests/: fibonacci.rs
functions/: Cargo.toml
functions/src/: main.rs
generics_time/: Cargo.toml
generics_time/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
lifetimes/src/: main.rs
ockam_rv/: Cargo.toml
ockam_rv/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
public_ip_demo/: Cargo.toml
public_ip_demo/src/: main.rs
references/: Cargo.toml  main.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs
rustre/: Cargo.toml
rustre/src/: main.rs
rusty_engine_tutorial/: Cargo.toml
rusty_engine_tutorial/src/: main.rs
slices/: Cargo.toml
slices/src/: main.rs
structures/: Cargo.toml
structures/src/: main.rs
testing_diff_dataflow/: Cargo.toml
testing_diff_dataflow/src/: main.rs
trait_sample/: Cargo.toml
try_wgpu/: Cargo.toml
try_wgpu/src/: lib.rs  (+1 more)
url-shortener/: Cargo.toml
url-shortener/src/: lib.rs  main.rs
url-shortener/tests/: validation.rs
variables/: Cargo.toml
(+4 files in other folders)
