[package]
name = "testing_diff_dataflow"
version = "0.1.0"
authors = ["Orlando Mendez <mmoa33@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#timely = { git = "https://github.com/TimelyDataflow/timely" }
timely = "0.11.1"
differential-dataflow = "0.11.0"
